@@ -683,6 +683,13 @@ int main(int argc, char *argv[])
 	       usage(3);
        }
    }
+
+   if (optind < argc)
+   {
+      fprintf(stderr,"SFCB not started: unrecognized config property %s\n",argv[optind]);
+      usage(1);
+   }
+
    startLogging("sfcb",syslogLevel);
 
    mlogf(M_INFO,M_SHOW,"--- %s V" sfcHttpDaemonVersion " started - %d\n", name, currentProc);
